# hackprincetonS26

./: .env.example  .gitignore  CLAUDE.md  FINALIZE_PLAN.md  LICENSE  README.md  cc.md  new-prompt.md  prompt.md  pyproject.toml  test-campaign.md
.github/workflows/: ci-cd.yml  ci.yml
backend/: README.md  deps.py  main.py  openai_demo.py  schemas.py
backend/connectors/: __init__.py  calendar.py  email.py  stub.py
backend/endpoints/: __init__.py  dashboard.py  dataset.py  mcp.py  signal.py  timeline.py
backend/tests/: conftest.py  test_analyze.py  test_audit.py  test_audit_extended.py  test_complete.py  test_dashboard.py  test_dataset.py  test_mcp.py  (+4 more)
docs/: architecture.md  demo-document.md  demo-script.md  pitch-deck-outline.md  plan-phases-5-7.md  shortcuts.md
experiments/: FIXES.md  ablations.py  calibrate_epsilon.py  diagnose_dp_path.py  route_distribution.py  run_attacks.py
frontend/: .env.example  README.md  metadata.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
paper/: code_audit.md  code_audit.tex  combined.tex  conclusions.md  discussion.md  discussion.tex  hypothesis.md  hypothesis.tex  methodology.md  methodology.tex  paper.md  paper.tex  references.md  references.tex  results.md  results.tex
product-build/: CHANGELOG.md
scripts/: check_comments.py  demo.sh  download_gemma.py  reset-demo.sh  seed-demo.py  setup.sh  supabase_migration.sql  versions.md
site/: app.js  index.html  styles.css
tests/: conftest.py  test_attacks.py  test_local_model.py  test_mock_data.py  test_phase2.py  test_remote_client.py
(+105 files in other folders)
